--- a/myapp/templates/footer.html
+++ b/myapp/templates/footer.html
@@ -1,7 +1,8 @@
 
+{% load static %}
+<link rel="stylesheet"  href="{% static 'css/style.css' %}">
 
+<link rel="stylesheet"  href="{% static 'css/style.css' %}"> 
 
-    <footer class="footer">      
+    <footer class=" footer">      
         <p>&copy; 2023 StudyNotehub. All rights reserved.</p>    </footer>
- 
-   
