--- a/myapp/static/css/login.css
+++ b/myapp/static/css/login.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    background-color:cadetblue ;
     margin: 0;
     padding: 0;
 }
@@ -20,5 +21,8 @@ body {
     background-color: #000;
     color: #fff;
     cursor: pointer;
+}
+.button-home{
+    margin: 10%;
 }
 
