--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -1,19 +1,29 @@
 body {
-      font-family: Arial, sans-serif; 
-      margin: 0;  padding: 0;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: slategray;
+}
+
+header {
+    background-color: #333;
+    padding: 20px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+@media (max-width: 768px) {
+    header {
+        padding: 10px;
+        font-size: 14px;
     }
-    header {  
-        background-color: #333;  
-        padding: 20px;  
-        color: #fff;  
-        display: flex;  
-        align-items: center;  
-        justify-content: space-between;
-    }
-    .logo img { 
-        height: 40px;  
-        vertical-align: middle;
-    }
+}
+
+.logo img {
+    height: 40px;
+    vertical-align: middle;
+}
     nav ul {  
         list-style-type: none;  
         display: flex;  
@@ -23,13 +33,15 @@ body {
         color: #fff;  
         text-decoration: none;
     }
-    .banner {  
-        background-color: #f5f5f5;  
+    .banner { 
+        margin-top: 2%; 
         padding: 40px;  
+        border: ridge;
+        color: snow;
         text-align: center;}
         .banner h2 {  
             color: #333;  
-            margin-top: 0;
+            margin-top: auto;
         }
     .buttons {  
         display: inline-block;  
@@ -72,37 +84,24 @@ body {
         text-decoration: none;
     }
     footer {  
+        position: relative;
+        margin-top: 20%;
+        width: 100%;
         background-color: #333;  
         color: #fff;  
         padding: 20px;  
         text-align: center;
     }
+    
     .sub-part {
-        display: none; /* Hide sub-parts by default */
+        display: none; 
       }
   
       .active {
-        display: block; /* Show sub-parts when active */
+        display: block; 
       }
-      .submenu:hover .dropdown-menu {
-        display: block;
-      }
-      
-      .dropdown-menu {
-        display: none;
-        position: absolute;
-        background-color: #333;
-        padding: 10px;
-      }
-      
-      .dropdown-menu li {
-        margin: 10px;
-    }
+     
     
-    .dropdown-menu li a {
-      color: #fff;
-      text-decoration: none;
-    }
     .login-butn{border-radius:25px;border:2px solid #fd9005;color:#fd9005;padding:10px 20px;font-size:20px;cursor:pointer;margin:5px;transition:all 0.5s ease;background:none}
     .login-butn:not(:disabled):hover{color:white;background:#fd9005}
     .login-butn:not([disabled]):hover{color:white;background:#fd9005}
@@ -111,6 +110,102 @@ body {
     .index-ul{
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-evenly;
+        text-align: center;
+        align-items: flex-end;
+        border-color: oldlace;
+        border-bottom-style: groove;
+        border-radius: 10px;
+        border-bottom-color: seagreen;
     }
+    .category-grid{
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+    .category-box {
+        border: 2px solid #007BFF;
+        border-radius: 30px;
+        padding: 20px;
+        box-shadow: 0 5px 7px rgb(52 8 8 / 74%);
+        transition: transform 0.3s;
+        margin: 10px;
+        background: #fff;
+
+    }
+    .category-box:hover {
+        transform: translateY(-5px);
+    }
+    @media (max-width: 768px) {
+        .index-ul {
+            flex-direction: column; 
+            align-items: center;
+        }
+    
+        .category-grid {
+            justify-content: flex-start;
+        }
+    }
+    .alert-marquee {
+        position: relative;
+        width: 100%;
+        background-color: #f3f3f3;
+        padding: 3px;
+    }
+    
+    marquee {
+        font-size: 14px;
+        color: #333;
+        white-space: nowrap;
+    }
+    
+    marquee a {
+        text-decoration: none;
+        color: #ec330e;
+        margin-right: 20px;
+    }
+    .stop-marquee {
+        animation-play-state: paused;
+    }
+    a{
+        text-decoration: none;
+        color: #171614;
+    }
+    a :hover{
+        color: #007BFF;
+    }
+    a:visited{
+        color: red;
+    }
+     
+   .open {
+    > .dropdown-menu {
+        padding:20px ;
+        display: flex;
+    }
+}
+.latest-addition{
+    margin: 10%;
+    position: relative;
+}
+.image-section{
+    display: grid;
+    justify-items: center;
+}
    
+.box{
+    box-decoration-break: slice;
+    padding: 20px;
+    height: 100%;
+    background: silver;display: flex;
+    margin: 2px; flex-grow: 1;
+    box-shadow: 0 3px 6px rgba(3, 104, 42, 0.1); 
+    border-radius: 10px; 
+    transition: transform 0.5s;
+}
+
+
+   
+
+
