--- a/myapp/templates/category.html
+++ b/myapp/templates/category.html
@@ -1,24 +1,59 @@
-{%load static %}
-<link rel="stylesheet"  href="{% static 'css/style.css' %}"> 
-
-{% include "header.html" %}
-<main>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="{% static 'css/category.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy0z97XIZ+T38vz92E+72F1EGtIbbqBE+u" crossorigin="anonymous">
+</head>
+<body>
+    <section class="header-section">
+        <div class="container">
+            <div class="logos">
+                <img src="{% static 'images/logo.jpg' %}" alt="StudyNotehub Logo">
+            </div>
+            
+            
+            
+            <div class="breadcrumb-container header-tags">
+                <nav aria-label="breadcrumb">
+                    <div class="breadcrumb-item">
+                        <a href="/">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-folder2-open" viewBox="0 0 16 16">
+                                <path d="M1 3.5A1.5 1.5 0 0 1 2.5 2h2.764c.958 0 1.76.56 2.311 1.184C7.985 3.648 8.48 4 9 4h4.5A1.5 1.5 0 0 1 15 5.5v.64c.57.265.94.876.856 1.546l-.64 5.124A2.5 2.5 0 0 1 12.733 15H3.266a2.5 2.5 0 0 1-2.481-2.19l-.64-5.124A1.5 1.5 0 0 1 1 6.14V3.5zM2 6h12v-.5a.5.5 0 0 0-.5-.5H9c-.964 0-1.71-.629-2.174-1.154C6.374 3.334 5.82 3 5.264 3H2.5a.5.5 0 0 0-.5.5V6zm-.367 1a.5.5 0 0 0-.496.562l.64 5.124A1.5 1.5 0 0 0 3.266 14h9.468a1.5 1.5 0 0 0 1.489-1.314l.64-5.124A.5.5 0 0 0 14.367 7H1.633z"/>
+                            </svg> Home
+                        </a>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </section>
+    
     <section id="content">
-        <h1>{{ category.name }}</h1>
+        <h1 class="text-center">{{ category.name }}</h1>
         
         <!-- Display Classes -->
-        <section id="classes">
-            <h2>Classes</h2>
-            <ul>
+        <section id="classes" class="border">
+            <h2 class="font-family-monospace text-center">Classes</h2>
+            <ul class="image-section grid-container">
                 {% for class_obj in classes %}
-                <li>
-                 <a href="{% url 'class' category_name=category.name class_name=class_obj.name %}">
-                    <h3>{{ class_obj.name }}</h3>
-                    </a>
-                </li>
-                {% endfor %}
-            </ul>            
+                    <div class="box">
+                        <a href="{% url 'class' category_name=category.name class_name=class_obj.name %}">
+                            <h3>{{ class_obj.name }}</h3>
+                        </a>
+                        <p class="class-description">
+                            All the notes and syllabus of {{ class_obj.name }} will be available here. Users can download the PDF.
+                        </p>
+                    </div>
+                    {% endfor %}
+            </ul>
         </section>
     </section>
 </main>
+
 {% include "footer.html" %}
+</body>
+</html>
