--- a/myapp/templates/class.html
+++ b/myapp/templates/class.html
@@ -1,21 +1,72 @@
 {% load static %}
-{% include "header.html" %} 
-<main>
-    <section id="content">
-        <h1>{{ category.name }}</h1>
-        <h2>{{ class.name }}</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="{%static 'css/class.css' %}">
+    </head>
+
+  <body>
+
+      <main style="min-height: 52%;">
         
-        <!-- Display Subjects -->
-        <section id="subjects">
-            <h2>Subjects</h2>
-            <ul>
-                {% for subject_item in subjects %}
-                    <li><a href="{% url 'class' category_name=category.name class_name=class_obj.name subject_name=subject_item.name %}">{{ subject_item.name }}</a></li>
-                {% endfor %}
-            </ul>
-        </section>
-        fdkdjf
-        dfdfj
+    <section class="header-section">
+        <div class="container">
+            <div class="logos">
+                <img src="{% static 'images/logo.jpg' %}" alt="StudyNotehub Logo">
+            </div>
+            <div class="breadcrumb-container header-tags">
+                <nav aria-label="breadcrumb">
+                    <div class="breadcrumb-item">
+                    <a href="/">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                            <path d="M8.293 1.293a.5.5 0 0 1 .414 0l5 5a.5.5 0 0 1 .093.535l-.093.097-6 6a.5.5 0 0 1-.74-.037L2 6.414V14.5a.5.5 0 0 1-1 0V6.414a.5.5 0 0 1 .146-.354l6-6z"/>
+                            <path fill-rule="evenodd" d="M7.293.293a1 1 0 0 1 1.414 0l6 6a1 1 0 0 1 .263.465l.03.1a1 1 0 0 1-.296.878L8 15.586a1 1 0 0 1-1.497-.067l-.084-.094-7-7a1 1 0 0 1 0-1.414l7-7z"/>
+                        </svg> Home
+                    </a>
+                
+              
+                    <a href="{% url 'category' category_name=category.name %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder-symlink" viewBox="0 0 16 16">
+                            <path d="m11.798 8.271-3.182 1.97c-.27.166-.616-.036-.616-.372V9.1s-2.571-.3-4 2.4c.571-4.8 3.143-4.8 4-4.8v-.769c0-.336.346-.538.616-.371l3.182 1.969c.27.166.27.576 0 .742z"/>
+                            <path d="m.5 3 .04.87a1.99 1.99 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14h10.348a2 2 0 0 0 1.991-1.819l.637-7A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2zm.694 2.09A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09l-.636 7a1 1 0 0 1-.996.91H2.826a1 1 0 0 1-.995-.91l-.637-7zM6.172 2a1 1 0 0 1 .707.293L7.586 3H2.19c-.24 0-.47.042-.683.12L1.5 2.98a1 1 0 0 1 1-.98h3.672z"/>
+                        </svg> {{ category.name }}
+                    </a>
+                </div>
+                
+        </nav>
+    </div>
+    </div>
+</section>
+<section id="content" class="container mt-4">
+    <h1 class="text-center category-name">{{ category.name }}</h1>
+    <h2 class="text-center class-name">{{ class.name }}</h2>
+    
+    <!-- Display Subjects -->
+    <section id="subjects">
+        <h2 class="mb-4 text-center">Subjects</h2>
+        
+        <div class="card-deck">
+            {% for subject_item in subjects %}
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ subject_item.name }}</h5>
+                        <p class="card-text">Description of {{ subject_item.name }} goes here.</p>
+                        <a href="{% url 'board' category_name=category.name class_name=class_obj.name subject_name=subject_item.name %}" class="btn btn-primary">Go to {{ subject_item.name }}</a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </section>
+</section>
     </section>
 </main>
+
 {% include "footer.html" %}
+
+</body>  
+</html>
