--- a/myapp/templates/header.html
+++ b/myapp/templates/header.html
@@ -1,37 +1,94 @@
 {% load static %}
-{%block content%}
-<link rel="stylesheet"  href="{% static 'css/style.css' %}"> 
-<script src="{%static 'js/script.js'%}"></script>
-<header>     
-    <div class="logo">      
-         <div class="logo">
 
-
-</div>     
-         <h1>StudyNotehub</h1>
-   </div>  
-   <div>     
-   <form id="searchForm">        
-       <input type="text" placeholder="Enter class or subject">        
-       <button class="buttons" type="submit">Search</button>      
-   </form>   
-   </div>
-   <li class="submenu">
-       <a href="#">Syllabus ▼</a>
-       <ul class="dropdown-menu">
-         <li><a href="#">Class A</a></li>
-         <li><a href="#">Class B</a></li>
-         <li><a href="#">Class C</a></li>
-       </ul>
-     </li>  
-     <a href="/">Home</a>
-     <a href="/notes">Notes</a>
-     <a href="/about">About</a>     
-     </ul>
-     <a href="{% url 'login' %}"> <button class="login-butn" type="button">login</button> </a>
-
-
-  
-   </nav>  
-</header> 
-{%endblock%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/header.css' %}">
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="{% static 'images/logo.jpg' %}" alt="StudyNotehub Logo" height="30">
+                    StudyNotehub
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="notesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Syllabus
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="notesDropdown">
+                                     <div>
+                                        <h6 class="dropdown-header">CBSE</h6>
+                                        <a class="dropdown-item" href="#">Class 8</a>
+                                        <a class="dropdown-item" href="#">Class 9</a>
+                                        <a class="dropdown-item" href="#">Class 10</a>
+                                    </div>
+                                    <div>
+                                        <h6 class="dropdown-header">JKBOSE</h6>
+                                        <a class="dropdown-item" href="#">Plus 2</a>
+                                        <a class="dropdown-item" href="#">Plus 8</a>
+                                        <a class="dropdown-item" href="#">Class 10</a>
+                                    </div>
+                                    <div>
+                                        <h6 class="dropdown-header">UOL</h6>
+                                        <a class="dropdown-item" href="#">Second Sem</a>
+                                        <a class="dropdown-item" href="#">First Sem</a>
+                                        <a class="dropdown-item" href="#">Third Sem</a>
+                                    </div>
+                                </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="notesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Notes
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="notesDropdown">
+                                 <div>
+                                    <h6 class="dropdown-header">CBSE</h6>
+                                    {% for class_obj in classes %}
+                                    <a class="dropdown-item" href="{% url 'class' category_name='CBSE' class_name=class_obj.name %}">{{ class_obj.name }}</a>
+                                {% endfor %}
+                                </div>
+                                <div>
+                                    <h6 class="dropdown-header">JKBOSE</h6>
+                                    {% for class_obj in classes %}
+                                    <a href="{% url 'category' category_name=JKBOSE class_name=class_obj.name %}">{{ class_obj.name }}</a>
+                                    {% endfor %}
+                                </div>
+                                <div>
+                                    <h6 class="dropdown-header">UOL</h6>
+                                    <a class="dropdown-item" href="#">Second Sem</a>
+                                    <a class="dropdown-item" href="#">First Sem</a>
+                                    <a class="dropdown-item" href="#">Third Sem</a>
+                                </div>
+                            </div>
+                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="admin/login/">
+                                <button class="btn btn-outline-light login-butn" type="button">Login</button>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+</body>
+</html>
