--- a/myapp/templates/board.html
+++ b/myapp/templates/board.html
@@ -20,7 +20,7 @@
             <div class="breadcrumb-container header-tags">
                 <nav aria-label="breadcrumb">
                     <div class="breadcrumb">
-                        <div class="breadcrumb-item">
+                        <div class="breadcrumb-item" >
                             <a href="/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                                     <!-- SVG Path for home icon -->
@@ -50,30 +50,30 @@
             <h2>{{ class.name }}</h2>
             <h3>{{ subject.name }}</h3>
 
+            
             <section id="notes">
                 <h2>Notes</h2>
                 <ul>
-                    {% for note in notes %}
-                    <li><a href="{% url 'download_file' note.id %}">{{ note.title }}</a></li>
-
-                    {% empty %}
+                    {% if note %}
+                        <li><a href="{% url 'download_notes' file_id=hashtitle.not_id %}">{{ note.title }}</a></li>
+                    {% else %}
                         <li>No files uploaded yet.</li>
-                    {% endfor %}
+                    {% endif %}
                 </ul>
             </section>
-
-            <!-- Display Syllabi -->
+            
             <section id="syllabus">
                 <h2>Syllabus</h2>
                 <ul>
-                    {% for syllabus in syllabi %}
-                    <li><a href="{% url 'download_file' syllabus.id %}">{{ syllabus.title }}</a></li>
-                    {% empty %}
+                    {% if syllabi %}
+                        <li><a href="{% url 'download_syllabus' syb_id=titlehash.syl_id %}">{{ syllabi.title }}</a></li>
+                    {% else %}
                         <li>No files uploaded yet.</li>
-                    {% endfor %}
+                    {% endif %}
                 </ul>
             </section>
-        </section>
+            
+            
     </main>
 
     {% include "footer.html" %}
